--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/leaflet": "^1.9.20",
     "date-fns": "^4.1.0",
     "dexie": "^4.2.0",
+    "framer-motion": "^12.23.12",
     "leaflet": "^1.9.4",
     "papaparse": "^5.5.3",
     "react": "^19.1.1",
